--- a/src/test/resources/rmffm.html
+++ b/src/test/resources/rmffm.html
@@ -24,7 +24,7 @@
                                     <a href="/muzyka/biografia,13712,Rita,Ora.html">Rita Ora &amp; Imanbek</a>:
                                     <a class="poplista-title" href="/au/poplista,utwor,Rita,Ora,Bang,Bang,3380.html">Bang Bang</a>
                                 </div>
-                            </div>
+                            </div>K
                             <div class="poplista-row">
                                 <div class="poplista-artist-title">
                                     <a href="/muzyka/biografia,14312,Dawid,Kwiatkowski.html">Dawid Kwiatkowski</a>:
